<resources>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="app_name">Data Dudu</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_conpassword">Confirm Password</string>
    <string name="str_login">Login</string>
    <string name="str_forgotpassword">Forgot Password?</string>
    <string name="str_loginal">Already a member ?</string>
    <string name="str_loginnow">Login Now</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_Email">Email</string>
    <string name="str_AddDevice">Add Device</string>
    <string name="str_Deviceman">Device Man</string>
    <string name="str_instr">Instructions</string>
    <string name="str_scan">Scan</string>
    <string name="str_next">Next</string>
    <string name="str_save">Save</string>
    <string name="str_choosewifi">Choose Wifi SSID</string>
    <string name="str_choosewifiprofile">Choose Wifi Profile</string>
    <string name="str_Encrypt_type">Encrypt Type</string>
    <string name="str_informations_AboutDevice">Informations About Device</string>
    <string name="str_sensorSSID">Sensor SSID</string>
    <string name="str_Unmount">Unmount</string>
    <string name="str_Welcome_to">Welcome to </string>
    <string name="str_DATA_DUDU">DATA DUDU</string>
    <string name="str_Device_Confirmation">Device Confirmation</string>
    <string name="str_ConfirmSetup">Confirm &amp; Setup</string>
    <string name="str_Wifi_SSID">Wifi SSID</string>
    <string name="str_Instructions">Instructions</string>
    <string name="str_Confirm">CONFIRM</string>
    <string name="str_Info">Info</string>
    <string name="str_SSID">SSID:</string>
    <string name="str_SN">SN:</string>
    <string name="str_ProcessingInfo">Processing Info</string>
    <string name="str_Device_Setup">Device Setup</string>
    <string name="str_Status">Status</string>
    <string name="str_Fail_Resason">Fail Reason</string>
    <string name="str_Add_Profile">Add Profile</string>
    <string name="str_SL">Select Language</string>
    <string name="str_English">English</string>
    <string name="str_Spanish">Spanish</string>
    <string name="str_Chinese">Chinese</string>
    <string name="str_French">French</string>
    <string name="str_Italian">Italian</string>
    <string name="str_DeviceList">Deveice List</string>
    <string name="str_Mount">Mount</string>
    <string name="str_WifiProfile">Wifi Profile</string>
    <string name="str_ConfirmM">Confrim</string>
    <string name="str_Setup">Setup</string>
    <string name="str_Finish">Finish</string>
    <string name="str_AddwifiProfile">Add Wifi Profile</string>
    <string name="str_ConfirmDevice">Confirm Device</string>
    <string name="str_SetupDevice">Setup Device</string>
    <string name="str_FinishDevice">Finish Device</string>
    <string name="str_DuduDevice">Dudu Device</string>
    <string name="str_Step1">Step 1</string>
    <string name="str_Step2">Step 2</string>
    <string name="str_Step3">Step 3</string>
    <string name="str_scanserial">Scan Serial</string>
    <string name="str_enterserial">Enter Serial</string>
    <string name="str_enterserialnumber">Enter Serial Number</string>
    <string name="str_serialnumber">Serial Number : </string>
    <string name="str_deviceAttached">Device Attached Status : </string>
    <string name="str_Done">Done</string>
    <string name="str_scandududevice">Scan DuDu Device</string>
    <string name="str_localdevice">Local Devices</string>
    <string name="str_devicesetup">Device Setup</string>
    <string-array name="TimeZone">
        <item>Timezone</item>
        <item>Timezone</item>
        <item>Timezone</item>
    </string-array>
    <string-array name="WorkProfile">
        <item>Work Profile</item>
        <item>Home Profile</item>
        <item>Work Profile</item>
    </string-array>
    <string-array name="EncryptType">
        <item>OPEN</item>
        <item>WEP</item>
        <item>WPA</item>
    </string-array>
    <string name="app_loading">Loading</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_discover">Discover</string>
    <string name="btn_discover_cancel">Cancel</string>
    <string name="btn_export">Export</string>
    <string name="btn_close">Close</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_options">Options</string>
    <string name="btn_back">Back</string>
    <string name="btn_info">Info</string>
    <string name="btn_ports">Ports</string>
    <string name="btn_remove">Remove</string>
    <string name="task_db">Downloading and installing %s database ...</string>
    <string name="task_services">Creating Services database ...\nThis may take a while ...</string>
    <string name="package_missing">%s must be installed from the market !</string>
    <string name="wifi_enabled">Wifi is enabled</string>
    <string name="wifi_enabling">Wifi is enabling</string>
    <string name="wifi_disabling">Wifi is disabling</string>
    <string name="wifi_disabled">Wifi is disabled</string>
    <string name="wifi_scanning">Wifi is scanning</string>
    <string name="wifi_associating">Wifi is associating with %s</string>
    <string name="wifi_dhcp">Obtaining IP address from %s</string>
    <string name="wifi_unknown">Wifi state unknown</string>
    <string name="net_ip">IP: %1$s/%2$d (%3$s)</string>
    <string name="net_carrier">CARRIER: %s</string>
    <string name="net_ssid">SSID: %s</string>
    <string name="net_mode">MODE: %s</string>
    <string name="net_mode_wifi">WiFi (%1$s %2$s)</string>
    <string name="net_mode_mobile">Mobile</string>
    <string name="net_mode_eth">Ethernet (Not supported yet)</string>
    <string name="net_mode_unknown">Unknown</string>
    <string name="discover_start">Discovery started ...</string>
    <string name="discover_finished">Discovery finished !</string>
    <string name="discover_canceled">Discovery canceled !</string>
    <string name="discover_proxy_title">Proxy Error</string>
    <string name="discover_proxy_msg">Discovery is canceled, because a mac address appeared multiple times, you probably are behind a proxy.\n\nGo to your Gateway from the browser : http://%s</string>
    <string name="discover_root_title">Installation: Root</string>
    <string name="discover_root_install">Do you want to install the scan daemon for root ?</string>
    <string name="discover_root_restart">Restarting application ...</string>
    <string name="discover_empty">Press Discover to start</string>
    <string name="discover_action_title">Choose an action</string>
    <string name="discover_action_scan">Scan ports</string>
    <string name="discover_action_rename">Change name</string>
    <string name="discover_action_saved">Name saved!</string>
    <string name="discover_action_deleted">Name deleted!</string>
    <string name="discover_myphone_name">MyPhone</string>
    <string name="scan_single_title">Scan IP</string>
    <string name="scan_single_summary">Enter an IP address or FQDN to scan, i.e. scanme.nmap.org</string>
    <string name="scan_noport">No open port found !</string>
    <string name="scan_noaction">No associated action !</string>
    <string name="scan_connect">Connect</string>
    <string name="scan_start">Scan started ...</string>
    <string name="scan_finished">Scan finished !</string>
    <string name="scan_canceled">Scan canceled !</string>
    <string name="scan_open">Open (%s)</string>
    <string name="scan_closed">Closed (%s)</string>
    <string name="scan_host_unreachable">Host unreachable !</string>
    <string name="scan_banner_title">Port %s/tcp</string>
    <string name="info_time">Response time:</string>
    <string name="info_mac">MAC Address:</string>
    <string name="info_nic">NIC vendor:</string>
    <string name="info_ports_open">Open ports:</string>
    <string name="info_ports_closed">Closed ports:</string>
    <string name="info_unknown">Unknown</string>
    <string name="export_finished">File saved !</string>
    <string name="export_choose">Choose file destination</string>
    <string name="export_save">Save</string>
    <string name="export_exists_title">File already exists</string>
    <string name="export_exists_msg">Do you want to overwrite ?</string>
    <string name="help_discovery_title">Hosts discovery</string>
    <string name="help_discovery_content">The method that is being used, does not need to have root privileges. In future release there will be more advanced techniques, once the non-root ones are polished.\n\nHere is how it works: \n1. Calculate the subnetwork range\n2. Iterate throught IP and query them\n3. First it sends an ICMP ping or Echo on tcp/7 (with InetAddress.isReachable())\n4. If it does not work, it tries to connect() on well known open tcp ports such as: 135, 139, 22, 111, 80\n5. If none of the above is successful, the host is not discovered</string>
    <string name="help_portscan_title">Port scan</string>
    <string name="help_portscan_content">Port scan is event driven, using Java\'s Selector and SocketChannel.\nThere is a fake timeout by registrering the time in ms at socket\'s creation and checking regularly this value.\nThe port scan method, as discovery, uses full tcp connection check. (will be more granular in the future with root features.)\n\nA maximum of 127 Sockets are opened at a time, so this is not always accurate, but quite fast. Again, a new feature is coming that will adapt times between requests according to host response time (kind of software network congestion control)\n\nA port is considered open when tcp connect() is fully successful, closed when no service is listening on the other end, or filtered when the timeout is reached.</string>
    <string name="help_links_title">Links</string>
    <string name="help_links_content">- TCP connect scan: http://nmap.org/book/man-port-scanning-techniques.html#id421401\n\n- Host discovery: http://nmap.org/book/man-host-discovery.html</string>
    <string name="preferences_help">Help</string>
    <string name="preferences_export">Export</string>
    <string name="preferences_credits">Credits</string>
    <string name="preferences_discover">Discovery</string>
    <string name="preferences_portscan">Port Scan</string>
    <string name="preferences_advanced">General</string>
    <string name="preferences_donate">Donate: If you like this app, you can buy me a beer.</string>
    <string name="preferences_resolve_name_title">Resolve Hostname</string>
    <string name="preferences_resolve_name_summary">Use system DNS to resolve ip addresses</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_vibrate_summary">Vibrate when Scan is completed</string>
    <string name="preferences_ratecontrol_enable_title">Rate control</string>
    <string name="preferences_ratecontrol_enable_summary">Enable automatic rate detection</string>
    <string name="preferences_timeout_discover_title">Custom rate</string>
    <string name="preferences_timeout_discover_summary">Rate of discovery in millisecondes</string>
    <string name="preferences_port_start_title">First Port</string>
    <string name="preferences_port_start_summary">First TCP Port to scan. 1-65535</string>
    <string name="preferences_port_end_title">Last Port</string>
    <string name="preferences_port_end_summary">Last TCP Port to scan. 1-65535</string>
    <string name="preferences_banner_title">Services banners</string>
    <string name="preferences_banner_summary">Read banner from a connected socket (ex.: SSH-2.0-OpenSSH_5.1p1)</string>
    <string name="preferences_timeout_force_title">Custom timeout</string>
</resources>