<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@drawable/rounded_corner_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/txvHeader"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/str_enterserialnumber"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3" />

        <EditText
            android:id="@+id/edt_EnterSerial"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/str_enterserial"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3" />

        <Button
            android:id="@+id/btn_Ok"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_stroke_g"
            android:gravity="center"
            android:text="@string/str_Done"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>
</LinearLayout>